<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/menu_share"
        android:showAsAction="ifRoom"
        android:title="@string/menu_share"
        android:icon="@drawable/ic_action_share">
        <menu>
            <group
                android:id="@+id/group_share"
                android:menuCategory="container"
                android:orderInCategory="100"
                android:showAsAction="ifRoom" >
                <item
                    android:id="@+id/action_share_image"
                    android:orderInCategory="100"
                    android:title="@string/action_share_image"/>
                <item
                    android:id="@+id/action_share_key"
                    android:orderInCategory="100"
                    android:title="@string/action_share_key"/>
            </group>
        </menu>
    </item>

</menu>